Paste Normal Vectors #62713

Closed
opened 2019-03-18 16:28:13 +01:00 by Johan Ernstsson · 8 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia 1070

Blender Version
Broken: (example: 2.80, 18e5540a48, master, 2019-03-06,
Worked: (optional)

When I mark an edge as sharp Or split edge normals, It should remember that when I paste custom normal direction on selected face?

Exact steps for others to reproduce the error
Bevel one edge on the cube, with two segments. Select all edges as sharp. Select top face, go to mesh - normals - copy. select top beveled face ( The one slighty tilted) go to mesh - normals - paste. Do the same steps for the one in the bottom. If you have edge normal in overlays you will se that the copy paste tool does not respect the mark as sharp. And because of that I cant push normals in any direction as i want.

**System Information** Operating system: Windows 10 Graphics card: Nvidia 1070 **Blender Version** Broken: (example: 2.80, 18e5540a48b6, master, 2019-03-06, Worked: (optional) **When I mark an edge as sharp Or split edge normals, It should remember that when I paste custom normal direction on selected face?** **Exact steps for others to reproduce the error** Bevel one edge on the cube, with two segments. Select all edges as sharp. Select top face, go to mesh - normals - copy. select top beveled face ( The one slighty tilted) go to mesh - normals - paste. Do the same steps for the one in the bottom. If you have edge normal in overlays you will se that the copy paste tool does not respect the mark as sharp. And because of that I cant push normals in any direction as i want.

Added subscriber: @Ernstsson

Added subscriber: @Ernstsson

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Bastien Montagne was assigned by Sebastian Parborg 2019-03-18 16:41:18 +01:00

I can confirm that it seems like the paste function also overwrites the sharp tags.

I can confirm that it seems like the paste function also overwrites the sharp tags.

I do not see any issue here? Sharp edge status is preserved afaics, since you are applying the adjacent face's normal, obviously the edge in-between both of those face will look smooth, since both faces now have the same normal…

Also Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc. Would be much simpler to understand exactly what you mean with a .blend file…

I do not see any issue here? Sharp edge status is preserved afaics, since you are applying the adjacent face's normal, obviously the edge in-between both of those face will *look* smooth, since both faces now have the same normal… Also Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, ***small and simple** .blend and/or other files to do so if needed*, etc. Would be much simpler to understand exactly what you mean with a .blend file…

Sorry if I did not report the template correct! Will do better next time!

Back to the bug,

When you mark a sharp edge/Normal split I suppose that the normals are split and I can manipulate them separately. But when I try to force the normals with copy and paste they move as one united. This happens:

image.png

I suppose this is the way to force normals in blender, I can't see why this does not work, or how you are supposed to do it otherwise?
image.png

Sorry if I did not report the template correct! Will do better next time! Back to the bug, When you mark a sharp edge/Normal split I suppose that the normals are split and I can manipulate them separately. But when I try to force the normals with copy and paste they move as one united. This happens: ![image.png](https://archive.blender.org/developer/F6845496/image.png) I suppose this is the way to force normals in blender, I can't see why this does not work, or how you are supposed to do it otherwise? ![image.png](https://archive.blender.org/developer/F6845504/image.png)

Would have been even simpler (and quicker for us to reproduce) with a .blend file…

custom_normals_edit_copy_paste_bug.blend

Now I can see the issue, looks like copy/paste is not taking into account selection modes as it should… will have a look.

Would have been even simpler (and quicker for us to reproduce) with a .blend file… [custom_normals_edit_copy_paste_bug.blend](https://archive.blender.org/developer/F6845833/custom_normals_edit_copy_paste_bug.blend) Now I can see the issue, looks like copy/paste is not taking into account selection modes as it should… will have a look.

This issue was referenced by f4b57b0190

This issue was referenced by f4b57b0190b6212c94825c5591f851b44def3d2b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62713
No description provided.